--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/RazorWire13/grimdark#readme",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "handlebars": "^4.0.12"
   }
 }
